# hpf-intelligent-audit

./: .env.example  .gitignore  README.md  docker-compose.yml  init_mock_data.py
catboost_info/: learn_error.tsv  (+2 more)
hpf-audit/: .gitignore  MIGRATE_NOTES.md  README.md  backend.Dockerfile  faiss_visualization.html  frontend.Dockerfile  housing_provident_fund.db  pyproject.toml  run.py
hpf-audit/data/faiss_index/: index.faiss
hpf-audit/frontend/: index.html  nginx.conf  package-lock.json  package.json
hpf-audit/frontend/src/: App.tsx  main.tsx
hpf-audit/frontend/src/api/: client.ts
hpf-audit/frontend/src/pages/: AgentPage.tsx  KnowledgePage.tsx  SkillsPage.tsx
hpf-audit/hpf_audit/: __init__.py
hpf-audit/hpf_audit/agent/: __init__.py  engine_v2.py  react_engine.py  skill_runner.py  text_to_sql.py
hpf-audit/hpf_audit/api/: __init__.py  database.py  duckdb_conn.py  main.py
hpf-audit/hpf_audit/api/routes/: agent.py  import_api.py  knowledge.py  schema.py  skills.py  sql_api.py
hpf-audit/hpf_audit/knowledge/: __init__.py  vector_store.py
hpf-audit/hpf_audit/ml_scorer/ml_engine/: README.md  features.py  main.py  model.py  train.py
hpf-audit/hpf_audit/skills/: __init__.py  base.py  data_analysis.py  generator.py  internal_control.py  langchain_tools.py  loan_compliance.py  mcp_client.py  models.py  organization_audit.py  retriever.py  risk_feedback.py  simple_generator.py  sql_executor.py  template_engine.py  validator.py  vector_retriever.py  withdrawal_audit.py
hpf-audit/hpf_audit/utils/: schema_loader.py
hpf-audit/tools/: faiss_visualization.html  visualize_faiss.py
hpf-common/: README.md  pyproject.toml
hpf-common/hpf_common/: README.md  __init__.py
hpf-common/hpf_common/config/: __init__.py
hpf-common/hpf_common/db/: __init__.py  inspector.py
hpf-common/hpf_common/embedding/: __init__.py
hpf-common/hpf_common/llm/: __init__.py  providers.py
hpf-common/hpf_common/tests/: __init__.py  test_core.py
hpf-common/hpf_common/utils/: __init__.py
hpf-platform/: .dockerignore  .env.example  AI_COMPARISON.md  DEPLOY_ML.md  DOCKER_BUILD_OPTIMIZATION.md  DOCKER_IMAGE_SIZE.md  Dockerfile  MIGRATE_NOTES.md  ML_VERSIONING.md  PREDICTION_GUIDE.md  README.md  SERVER_AUTO_TRAINING.md  docker-compose.ml.yml  pyproject.toml  verify_platform.sh
hpf-platform/dbt_project/: .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml
hpf-platform/dbt_project/models/bronze/: schema.yml  src_contracts.sql  src_gr_dk_hkmx.sql  src_gr_dk_ht.sql  src_gr_jcxx.sql
hpf-platform/dbt_project/scripts/: generate_bronze.py  generate_silver.py
hpf-platform/hpf_platform/: __init__.py
hpf-platform/hpf_platform/etl/: README.md  __init__.py  app.py  config.py  migrate_sqlite.py  oracle_inspector.py  pipeline_oracle.py  smart_sync.py  sync_verifier.py
hpf-platform/hpf_platform/ml/: README.md  __init__.py  api.py  compare_models.py  features.py  predict.py  train.py
hpf-platform/scripts/: auto_train.sh  generate_mock_data.py
(+12 files in other folders)
