[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpf-audit"
version = "2.0.0"
description = "住房公积金智能审计系统"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "HPF Team"}
]
dependencies = [
    "hpf-common[llm,db,embedding]>=1.0.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    
    # ✨ LangChain 生态
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    "langsmith>=0.0.70",
    
    # ✨ 向量库 (使用API Embedding，不需要本地模型)
    "faiss-cpu>=1.7.4",
    
    # ML
    "scikit-learn>=1.3",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hpf_audit*"]
exclude = ["data*", "frontend*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
hpf-audit = "hpf_audit.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
