[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpf-common"
version = "1.0.0"
description = "住房公积金系统公共基础库"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "HPF Team"}
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
]
db = [
    "duckdb>=0.10",
    "sqlalchemy>=2.0",
    "oracledb>=2.0",
]
embedding = [
    "chromadb>=0.4",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
